# ffpark

./: LICENSE  README.md
doc/文档备份/: .~LED一体箱通讯协议（TCP、RS485）_V3.5.doc  Bcenter与Bipc通讯协议(1).doc  Bcenter与Bipc通讯协议.doc  Bcenter与Bled通讯协议.doc  Bipc与Bgui通讯协议（视频显示）.doc  Client SDK Development Manual.doc  Top与Bgui通讯协议（状态展示）.doc  交接文档  博昂停车场系统设计文档.docx  客户端SDK开发手册.doc  工作总结梳理.docx  数据库 (2)(1).xlsx  欧冠LED一体箱通讯协议（TCP、RS485）_V3.5.doc  欧冠LED一体箱通讯协议（TCP、RS485）_V4.0.doc
src/: CMakeLists.txt
src/hal/: CMakeLists.txt
src/hal/common/: CMakeLists.txt  base64.h  bglobal.cpp  bglobal.h  common.cpp  common.h  net_tcp.cpp  net_tcp.h  net_udp.cpp  net_udp.h  test_bc_plate.cpp  test_http_push.cpp  test_json_base64.cpp
src/hal/ffhal/: CMakeLists.txt  ipc_config.cpp  ipc_config.h  ipc_controller.cpp  ipc_controller.h  main.cpp  test-server.cpp  test-server.cpp.bak  trigger.cpp
src/hal/hal/aio_bc/: CMakeLists.txt  aio_bc.cpp  aio_bc.h  test_lcd_show.cpp  test_lcd_voice.cpp  test_open_door.cpp
src/hal/hal/aiocamera/: CMakeLists.txt  aiocamera.cpp  aiocamera.h
